fix: overflow-hidden issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -180,7 +180,7 @@ nav > a:hover::before {
 
 .card {
   @apply w-1/3 lg:w-1/4;
-  height: 31.25rem;
+  height: 39.25rem;
   position: relative;
   transform: rotateY(0deg);
   transform-style: preserve-3d;
